--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 ---
 layout: home
-title: Welcome to my webpage
+title: Xiaoyue Xi
+subtitle: PhD candidate in Statistics at Imperial College London
 ---
